--- a/p5_prueba/jsconfig.json
+++ b/p5_prueba/jsconfig.json
@@ -2,6 +2,6 @@
   "include": [
     "*.js",
     "libraries/*.js",
-    "c:\\Users\\Eliana Mejía Cortes\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.11\\p5types\\global.d.ts"
+    "/Users/usuario/.vscode/extensions/samplavigne.p5-vscode-1.2.11/p5types/global.d.ts"
   ]
 }
